--- a/tutorial/1.md
+++ b/tutorial/1.md
@@ -8,18 +8,20 @@
  1.[下载](https://letshow.github.io/dist)
 
  2.编写Html，在其中添加引用
- ` &lt;!DOCTYPE html&gt;
-  &lt;html lang=&quot;zh-CN&quot;&gt;
-   &lt;head&gt;
-     &lt;meta charset=&quot;utf-8&quot;&gt;
-     &lt;title&gt;LetShow Template&lt;/title&gt;
-   &lt;/head&gt;
-   &lt;body&gt;
-     &lt;!-- &#20320;&#30340;&#20195;&#30721; --&gt;
-     &lt;!-- jQuery (LetShow &#20381;&#36182; jQuery&#65292;&#25152;&#20197;&#24517;&#39035;&#25918;&#22312;&#21069;&#36793;) --&gt;
-     &lt;script src=&quot;https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js&quot;&gt;&lt;/script&gt;
-     &lt;!-- &#21152;&#36733; fabricjs --&gt;
-     &lt;script src=&quot;https://cdn.bootcss.com/fabric.js/2.3.0/fabric.min.js&quot;&gt;&lt;/script&gt;
-     &lt;script src=&quot;/js/letshow.min.js&quot;&gt;&lt;/script&gt;
-   &lt;/body&gt;
- &lt;/html&gt;`
+  ```
+  &lt;!DOCTYPE html&gt;
+   &lt;html lang=&quot;zh-CN&quot;&gt;
+     &lt;head&gt;
+       &lt;meta charset=&quot;utf-8&quot;&gt;
+       &lt;title&gt;LetShow Template&lt;/title&gt;
+     &lt;/head&gt;
+     &lt;body&gt;
+       &lt;!-- &#20320;&#30340;&#20195;&#30721; --&gt;
+       &lt;!-- jQuery (LetShow &#20381;&#36182; jQuery&#65292;&#25152;&#20197;&#24517;&#39035;&#25918;&#22312;&#21069;&#36793;) --&gt;
+       &lt;script src=&quot;https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js&quot;&gt;&lt;/script&gt;
+       &lt;!-- &#21152;&#36733; fabricjs --&gt;
+       &lt;script src=&quot;https://cdn.bootcss.com/fabric.js/2.3.0/fabric.min.js&quot;&gt;&lt;/script&gt;
+       &lt;script src=&quot;/js/letshow.min.js&quot;&gt;&lt;/script&gt;
+     &lt;/body&gt;
+   &lt;/html&gt;
+   ```
